hamburger still not rendering correctly on iOS safari. adjust menu font and sized hamburger class slightly

--- a/navstyle.css
+++ b/navstyle.css
@@ -56,7 +56,7 @@ li {
 	display: flex;
 	align-items: right;
 	gap: .8em;
-	font-size: 1.2em;
+	font-size: 1.3em;
 }
 
 .menu li:hover {
@@ -86,7 +86,7 @@ input[type=checkbox]{
 /*HAMBURGER MENU*/
 .hamburger {
  display: none;
- font-size: 35px;
+ font-size: 40px;
  user-select: none;
 }
 /* APPLYING MEDIA QUERIES */
@@ -113,6 +113,7 @@ input[type=checkbox]{
 input[type=checkbox]:checked ~ .menu{
  display: block;
 }
+
 
 
 .hamburger {
